# obscura

./: Cargo.toml
crates/obscura-api/: Cargo.toml
crates/obscura-api/examples/: basic.rs
crates/obscura-api/src/: browser.rs  config.rs  cookie.rs  error.rs  lib.rs  page.rs
crates/obscura-browser/src/: context.rs
crates/obscura-cdp/src/: dispatch.rs  server.rs
crates/obscura-cdp/src/domains/: dom.rs  input.rs
crates/obscura-cli/src/: main.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: ops.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: client.rs  cookies.rs  lib.rs
crates/obscura/src/: browser.rs
